# ig_repertoire_constructor

./: .gitignore  2_component_graph.graph  2_component_graph_weight.graph  CMakeLists.txt  LICENSE  Makefile  README  README.md  aimquast.py  aimquast_manual.html  antevolo.py  antevolo_manual.html  barcodedIgReC.html  barcodedIgReC_manual.html  barcoded_igrec.py  cdr_labeler.py  cleanup  cluster_aligned_sequences.py  compare_graphs.py  compare_rcm.py  compute_multiple_alignment.py  cpcfg  create_fastq_barcodes.py  dense_subgraph_finder.html  dense_subgraph_finder.py  diversity_analyzer.html  diversity_analyzer.py  diversity_analyzer_manual.html  draw_graph.py  dsf_manual.html  extract_migec_barcodes.py  ig_data_cleaner.py  ig_repertoire_constructor.py  ig_repertoire_constructor_2.0.py  ig_simulator.py  ig_simulator_manual.html  ig_tools_init.py  igquast.html  igquast.py  igquast_manual.html  (+24 more)
ext/src/: CMakeCache.txt  CMakeLists.txt
src/: .gitignore  CMakeLists.txt
src/abpair/: CMakeLists.txt  abpair_config.cpp  abpair_config.hpp  abpair_launch.cpp  abpair_launch.hpp  main.cpp
src/algorithms/: CMakeLists.txt
src/andy/: palindrome.py  palindrome1.Rmd
src/antevolo/: CMakeLists.txt  annotated_clone_by_read_constructor.cpp  annotated_clone_by_read_constructor.hpp  antevolo_config.cpp  antevolo_config.hpp  antevolo_launch.cpp  antevolo_launch.hpp  antevolo_output_writer.cpp  antevolo_output_writer.hpp  antevolo_processor.cpp  antevolo_processor.hpp  cdr3_hamming_graph_component_info.cpp  cdr3_hamming_graph_component_info.hpp  cdr3_hamming_graph_info.cpp  cdr3_hamming_graph_info.hpp  clone_set_with_fakes.hpp  evolutionary_stats_calculator.cpp  evolutionary_stats_calculator.hpp  evolutionary_tree_storage.cpp  evolutionary_tree_storage.hpp  main.cpp  naive_antevolo_processing.cpp  naive_antevolo_processing.hpp  parent_read_reconstructor.cpp  parent_read_reconstructor.hpp  related_clones_iterator.cpp  related_clones_iterator.hpp
src/ashtools/: README.md  align.py  barcode_cleaner.py  draw_barcode.py  fastq_space_replace.py  hg_for_rep.py  ig_basic.py  read_barcode_splitter.py  split_conn_comps.py  wc_reads.py
src/barcode_metrics/: barcode_quast.py  drawing_utils.py  manual.html  metrics.py  reading_utils.py  repertoire_structs.py
src/barcoded_simulator/: CMakeLists.txt  main.cpp
src/build_info/: .gitignore  CMakeLists.txt  build_info.cpp  build_info.cpp.in  build_info.py.in  test_build_info.cpp
src/cdr_labeler/: CMakeLists.txt  CdrLConfigLoader.cpp  CdrLConfigLoader.hpp  cdr_config.cpp  cdr_config.hpp  cdr_launch.cpp  cdr_launch.hpp  cdr_output.cpp  cdr_output.hpp  cdr_primitives.cpp  cdr_primitives.hpp  compressed_cdr_set.cpp  compressed_cdr_set.hpp  diversity_analyser.cpp  diversity_analyser.hpp  germline_db_labeler.cpp  germline_db_labeler.hpp  germline_db_labeling.cpp  germline_db_labeling.hpp  main.cpp  read_labeler.cpp  read_labeler.hpp
src/cmake/: check.cmake  deps.cmake  flags.cmake  gperftools.cmake  includes.cmake  libs.cmake  options.cmake
src/config/: CMakeLists.txt  config_utils.cpp  config_utils.hpp
src/core/: CMakeLists.txt  CloneInfo.cpp  CloneInfo.hpp  amino_acid_motif.cpp  amino_acid_motif.hpp  convert.cpp  convert.hpp  core_utils.hpp  decomposition.cpp  decomposition.hpp  read_archive.cpp  read_archive.hpp
src/de_novo_detection/: CMakeLists.txt  construction.cpp  construction.hpp  main.cpp
src/dense_sgraph_finder/: CMakeLists.txt  crs_matrix.hpp  decomposition_stats_calculator.hpp  dense_subgraph_constructor.hpp  dsf_config.cpp  dsf_config.hpp  include_me.hpp  launch.cpp  launch.hpp  main.cpp  metis_permutation_constructor.hpp
src/fast_ig_tools/: CMakeLists.txt  Makefile  banded_half_smith_waterman.hpp  bitread.hpp  fast_ig_tools.cpp  fast_ig_tools.hpp  hgc.cpp  hogc.cpp  hogc.hpp  ig_block_alignment.hpp  ig_component_splitter.cpp  ig_consensus_finder.cpp  ig_final_alignment.cpp  ig_final_alignment.hpp  ig_hgc_complexity_estimator.cpp  ig_kmer_counter.cpp  ig_kplus_vj_finder.cpp  ig_kplus_vj_finder.hpp  ig_matcher.cpp  ig_matcher.hpp  ig_swgraph_construct.cpp  ig_trie_compressor.cpp  ig_trie_compressor.hpp  test_ig_kplus_vj_finder.cpp  test_ig_trie_compressor.cpp  utils.cpp  utils.hpp
src/graph_utils/: CMakeLists.txt  collapse_identical_vertices.py  compute_decomposition_stats.py  convert_to_dot.py  convert_to_graph.py  crs_matrix.cpp  crs_matrix.hpp  decomposition.cpp  decomposition.hpp  draw_matrix.py  extract_subgraph.py  graph_collapsed_structure.cpp  graph_collapsed_structure.hpp  graph_component_map.cpp  graph_component_map.hpp  graph_io.cpp  graph_io.hpp  graph_io.py  graph_splitter.cpp  graph_splitter.hpp  graph_structs.py  include_me.hpp  permutation.cpp  permutation.hpp  run_all.py  sparse_graph.cpp  sparse_graph.hpp
src/graph_utils_py/: compute_decomposition_stats.py  convert_to_dot.py  convert_to_graph.py  mtx_to_graph.py
src/ig_quast_tool/: barcode_cleaner.py  barcode_cleaner_nojoin.py  barcodes_run_all.sh  consensus_all.sh  ig_compress_equal_clusters.py  ig_remove_low_abundance_reads.py  ig_report_supernodes.py  knuth_index.py  rcm_cmp.py  rcm_recoverer.py
src/ig_repertoire_constructor/: CMakeLists.txt  aligned_read_cluster.hpp  ig_config.cpp  ig_config.hpp  ig_repertoire_constructor.hpp  include_me.hpp  launch.hpp  main.cpp  read_archive.cpp  read_archive.hpp  repertoire.hpp  shared_kmer_string_set.hpp  spliced_read.hpp
src/ig_simulator/: CMakeLists.txt  Makefile  config.hpp  gene_database.hpp  hc_repertoire_launch.hpp  ig_simulator_config.cpp  ig_simulator_config.hpp  ig_simulator_launch.cpp  ig_simulator_launch.hpp  ig_simulator_utils.hpp  include_me.hpp  lc_repertoire_launch.hpp  main.cpp  multiplicity_creator.cpp  multiplicity_creator.hpp  productivity_checker.hpp  random_generator.hpp  random_index.cpp  random_index.hpp  repertoire.hpp  simulation_routines.cpp  simulation_routines.hpp  test_hc  test_lc
src/ig_tools/: .gitignore  CMakeLists.txt
src/include/: build_info.hpp  config.hpp.in  copy_file.hpp  k_range.hpp.in  memory_limit.hpp  perfcounter.hpp  runtime_k.hpp  segfault_handler.hpp  stage.cpp  stage.cpp~  (+3 more)
(+1665 files in other folders)
