# -*- cmake -*-

add_definitions(-w)

add_subdirectory(jemalloc)
add_subdirectory(nlopt)
add_subdirectory(python_libs/joblib2)
add_subdirectory(python_libs/joblib3)
add_subdirectory(python_libs/pyyaml2)
add_subdirectory(python_libs/pyyaml3)
add_subdirectory(yaml-cpp)
add_subdirectory(ConsensusCore)
add_subdirectory(bamtools)
add_subdirectory(samtools)
add_subdirectory(cppformat)
add_subdirectory(ssw)
add_subdirectory(boost_filesystem)
add_subdirectory(boost_program_options)
add_subdirectory(boost_regex)
add_subdirectory(boost_system)
add_subdirectory(boost_iostreams)
add_subdirectory(mph_index)
#add_subdirectory(bzip2)
add_subdirectory(zlib)
add_subdirectory(gtest)
