# -*- cmake -*-

add_definitions(-w)

add_subdirectory(jemalloc)
# add_subdirectory(nlopt)
add_subdirectory(yaml-cpp)
# add_subdirectory(ConsensusCore)
# add_subdirectory(samtools)
# add_subdirectory(cppformat)
# add_subdirectory(ssw)
add_subdirectory(boost)
# add_subdirectory(mph_index)
add_subdirectory(bzip2)
add_subdirectory(zlib)
add_subdirectory(gtest)
add_subdirectory(gmock)
